--- a/style.css
+++ b/style.css
@@ -339,13 +339,36 @@ body {
 /* responsive for mobile phones by using media queries */
 
 @media only screen and (max-width: 576px) {
-    .main-first, .main-second, .main-second-2, .main-third, .main-fourth {
+    .main-first, .main-second, .main-second-2, .main-third, .main-fourth, .footer {
         display: none;
     }
-    .header {
+    .header, .header-info {
         padding: 20px 20px;
+    }
+    .header-top {
+        margin-bottom: 30px;
+    }
+    .header-top1 h2 {
+        font-size: 15px;
     }
     .header-top2 {
         flex-direction: column;
+    }
+    .header-top2 p a {
+        font-size: 8px;
+    }
+    .header-info{
+        margin-bottom: 0;
+    }
+    .header-info h1 {
+        font-size: 20px;
+    }
+    .header-info h6 {
+        font-size: 10px;
+        margin: 20px 0;
+    }
+    .header-info button {
+        font-size: 10px;
+        padding: 10px 15px;
     }
 }
